# pytetris

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
pytetris/: pytetris.py  tetris2.py  tetrispiece.py
