[tool.poetry]
name = "pytetris"
version = "0.1.0"
description = ""
authors = ["Steve Clarke <84364906+s7clarke10@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Python-style entrypoints and scripts are easily expressed
[tool.poetry.scripts]
pytetris = "pytetris.pytetris:main"
